# redumper-ui

./: .gitignore  NOTICE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: check-upstream.yml  release.yml
.redumper/: upstream.json
scripts/: generate-icon.mjs  prepare-redumper.mjs  update-upstream-manifest.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: commands.ts  schema.ts  validation.test.ts  validation.ts
