[package]
name = "redumper-ui"
version = "0.1.725"
description = "Cross-platform desktop frontend for redumper"
authors = ["Redumper UI Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/whatever-industries/redumper-ui"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
